--- a/public/css/command.css
+++ b/public/css/command.css
@@ -1,3 +1,7 @@
+:root {
+  --font: "Jost";
+}
+
 html,
 body {
   margin: 0%;
@@ -91,7 +95,7 @@ p {
   border: none;
   outline: none;
 
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
@@ -174,7 +178,7 @@ p {
 }
 
 .navbar_frame .box_info_box span {
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 13px;
@@ -183,7 +187,7 @@ p {
 }
 
 .navbar_frame .box_info_box strong {
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -205,7 +209,7 @@ p {
   background: #f5c34b;
   border-radius: 50px;
 
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 700;
   font-size: 8px;
@@ -250,7 +254,7 @@ p {
 }
 
 .navbar_frame .browse_box span {
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -275,7 +279,7 @@ p {
 }
 
 .navbar_frame .router_menu a {
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -295,7 +299,7 @@ p {
 
 .navbar_frame .sorting_menu span {
   margin-left: 20px;
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -327,7 +331,7 @@ p {
   display: block;
   margin-bottom: 30px;
   color: rgb(4, 30, 66);
-  font-family: Jost;
+  font-family: var(--font);
   font-size: 18px;
   font-weight: 400;
   line-height: 26px;
@@ -366,7 +370,7 @@ p {
 
 .footer_frame .footer_contact_main div strong {
   color: rgb(4, 30, 66);
-  font-family: Jost;
+  font-family: var(--font);
   font-size: 15px;
   font-weight: 400;
   line-height: 22px;
@@ -376,7 +380,7 @@ p {
 .footer_frame .footer_contact_main div span {
   margin-top: 10px;
   color: rgb(4, 30, 66);
-  font-family: Jost;
+  font-family: var(--font);
   font-size: 15px;
   font-weight: 400;
   line-height: 22px;
@@ -390,7 +394,7 @@ p {
 
 .footer_frame .footer_support_box a {
   color: rgb(4, 30, 66);
-  font-family: Jost;
+  font-family: var(--font);
   font-size: 14px;
   font-weight: 400;
   line-height: 40px;
@@ -432,7 +436,7 @@ p {
 .footer_frame .mobile_app_box span {
   margin-left: 20px;
   color: rgb(4, 30, 66);
-  font-family: Jost;
+  font-family: var(--font);
   font-size: 14px;
   font-weight: 400;
 }
@@ -474,7 +478,7 @@ p {
 .footer_frame .footer_bottom_left span {
   margin-right: 60px;
   color: rgb(4, 30, 66);
-  font-family: Jost;
+  font-family: var(--font);
   font-size: 14px;
   font-weight: 400;
   line-height: 40px;
@@ -505,7 +509,7 @@ p {
 
 .footer_frame .footer_select_box span {
   color: rgb(98, 105, 116);
-  font-family: Jost;
+  font-family: var(--font);
   font-size: 14px;
   font-weight: 400;
   line-height: 40px;
@@ -520,7 +524,7 @@ p {
   outline: none;
   cursor: pointer;
   color: rgb(4, 30, 66);
-  font-family: Jost;
+  font-family: var(--font);
   font-size: 14px;
   font-weight: 400;
 }
