--- a/public/css/home.css
+++ b/public/css/home.css
@@ -6,7 +6,7 @@
 
 .category_top a {
   margin-left: 30px;
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -34,7 +34,7 @@
 }
 
 .container .category_top span {
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 28px;
@@ -154,7 +154,7 @@
   box-shadow: 0px 5px 20px rgba(0, 83, 246, 0.1);
   border-radius: 6px;
 
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -174,7 +174,7 @@
 }
 
 .container .product_title {
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -186,7 +186,7 @@
 .container .product_desc {
   margin-top: 7px;
   height: 56px;
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
@@ -210,7 +210,7 @@
 
 .container .review_box span {
   margin-left: 10px;
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -227,7 +227,7 @@
 }
 
 .container .price_box strong {
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -237,7 +237,7 @@
 
 .container .price_box span {
   margin-left: 10px;
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -290,7 +290,7 @@
   border-radius: 6px;
 
   margin-left: 20px;
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 13px;
@@ -302,7 +302,7 @@
   margin-top: 10px;
   width: 428px;
 
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 60px;
@@ -313,7 +313,7 @@
 .header_frame .header_content p {
   margin-top: 10px;
 
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -334,7 +334,7 @@
   background: #ffffff;
   border-radius: 6px;
 
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -375,7 +375,7 @@
 }
 
 .header_frame .box_left span {
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
@@ -385,7 +385,7 @@
 
 .header_frame .box_left p {
   margin: 10px 0;
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 26px;
@@ -394,7 +394,7 @@
 }
 
 .header_frame .box_left a {
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -457,7 +457,7 @@
 }
 
 .service_frame .service_content span {
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -467,7 +467,7 @@
 
 .service_frame .service_content p {
   width: 180px;
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
@@ -501,7 +501,7 @@
 }
 
 .shop_category_frame .category_top span {
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 28px;
@@ -510,7 +510,7 @@
 }
 
 .shop_category_frame .category_top a {
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -555,7 +555,7 @@
 
 .shop_category_frame .category_box span {
   margin-top: 15px;
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -624,7 +624,7 @@
   justify-content: center;
 
   background-color: #e5edff;
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -683,7 +683,7 @@
 
 .spec_product_frame .big_product_content span {
   color: rgb(4, 30, 66);
-  font-family: Jost;
+  font-family: var(--font);
   font-size: 15px;
   font-weight: 400;
   line-height: 22px;
@@ -693,7 +693,7 @@
   margin: 7px 0;
 
   color: rgb(4, 30, 66);
-  font-family: Jost;
+  font-family: var(--font);
   font-size: 26px;
   font-weight: 400;
   line-height: 38px;
@@ -701,7 +701,7 @@
 
 .spec_product_frame .big_product_content a {
   color: rgb(4, 30, 66);
-  font-family: Jost;
+  font-family: var(--font);
   font-size: 15px;
   font-weight: 400;
   line-height: 22px;
@@ -751,7 +751,7 @@
 
 .spec_product_frame .small_product_content strong {
   color: rgb(4, 30, 66);
-  font-family: Jost;
+  font-family: var(--font);
   font-size: 16px;
   font-weight: 400;
   line-height: 28px;
@@ -759,7 +759,7 @@
 
 .spec_product_frame .small_product_content span {
   color: rgb(98, 105, 116);
-  font-family: Jost;
+  font-family: var(--font);
   font-size: 13px;
   font-weight: 400;
   line-height: 22px;
@@ -864,7 +864,7 @@
 
 .event_content_box .event_title {
   color: rgb(255, 255, 255);
-  font-family: Jost;
+  font-family: var(--font);
   font-size: 28px;
   font-weight: 400;
   line-height: 40px;
@@ -888,7 +888,7 @@
 
 .timer_box strong {
   color: rgb(255, 255, 255);
-  font-family: Jost;
+  font-family: var(--font);
   font-size: 28px;
   font-weight: 400;
   line-height: 40px;
@@ -898,7 +898,7 @@
 
 .timer_box span {
   color: rgb(255, 255, 255);
-  font-family: Jost;
+  font-family: var(--font);
   font-size: 16px;
   font-weight: 400;
   line-height: 28px;
@@ -916,7 +916,7 @@
   background: #ffffff;
   border-radius: 6px;
   color: rgb(4, 30, 66);
-  font-family: Jost;
+  font-family: var(--font);
   font-size: 15px;
   font-weight: 400;
   line-height: 22px;
